# MiniFy

./: .biomeignore  .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  compose.yml  env.example  et --hard 4dd9226  index.html  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  turbo.json
.agents/commands/: commit.md
.agents/rules/: 020-coding-style.mdc  030-codebase-structure.mdc
.changeset/: ai-dj-randomness.md  bold-tips-agree.md  brave-foxes-dance.md  brave-playlists-flow.md  bright-waves-dance.md  calm-rivers-rest.md  calm-updates-stop.md  clean-code-flow.md  clear-everything-button.md  clever-llms-save.md  discord-rich-presence.md  fix-keyring-race.md  fix-rust-deps.md  fluffy-docs-expand.md  happy-cats-sleep.md  happy-tigers-swim.md  last-played-track.md  provider-active-status.md  quick-keys-dance.md  quick-lions-run.md  secure-ai-keys-keyring.md  secure-data-keyring.md  sig-files-support.md  smart-ai-context.md  smart-dj-queue.md  smooth-music-flow.md  steady-lists-play.md  swift-api-optimizations.md  tall-birds-fly.md  youtube-music-fixes.md  youtube-music-full-integration.md  youtube-music-support.md
.cursor/commands/: commands.md  custom.md
.cursor/rules/: 010-git-conventions.mdc  020-changesets.mdc  development.md  rules.md
.github/: dependabot.yml
.github/workflows/: build-desktop.yml  build.yml  lint-desktop.yml  release-desktop.yml
.tauri/: README.md  updater.key.pub
apps/desktop/: .gitignore  index.html  package.json  tsconfig.node.json  vite.config.ts
apps/desktop/flatpak/: .gitignore  com.modiostudio.minify.desktop  com.modiostudio.minify.metainfo.xml  com.modiostudio.minify.yml
apps/desktop/scripts/: cef-patch.mjs  clear-auth.js
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.tauri/: README.md  updater.key.pub
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/scripts/: generate-latest-json.js  inject-pubkey.js
apps/desktop/src-tauri/src/: ai_keyring.rs  app_runtime.rs  credential_store.rs  custom_themes.rs  debug.rs  discord_rpc.rs  lib.rs  main.rs  resize.rs  settings.rs  spotify_auth.rs  youtube_auth.rs
apps/docs/: .dockerignore  .gitignore  .npmrc  astro.config.mjs  dockerfile  nginx.conf  package.json
apps/docs/src/: content.config.ts
apps/www/: .biomeignore  .gitignore  dockerfile  next.config.mjs  package.json  tsconfig.json
apps/www/app/: globals.css  layout.tsx  page.tsx
apps/www/components/: ContributorRow.tsx  footer.tsx  (+6 more)
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  settings.rs
src/SpotifyAuth/: auth.ts  callback.ts  spotifyServer.ts
src/ui/: global.css  index.tsx  settingLib.ts
(+142 files in other folders)
