[package]
name = "spotify-mini-player"
version = "0.1.0"
description = "Better Mini Player"
authors = ["you"]
edition = "2021"
default-run = "spotify-mini-player"

[lib]
name = "spotify_mini_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "spotify-mini-player"
path = "src/main.rs"

[[bin]]
name = "clear"
path = "src/bin/clear.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "4.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["http1", "json"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
base64 = "0.22"
url = "2.5"
chrono = "0.4"
rand = "0.8"
lazy_static = "1.4"
keyring = "2"
hex = "0.4"
urlencoding = "2.1"
webbrowser = "0.8"
