[package]
name = "minify"
version = "0.1.0"
description = "MiniFy"
authors = ["you"]
edition = "2021"
default-run = "minify"

[lib]
name = "minify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "minify"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-fs = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["http1", "json"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
base64 = "0.22"
url = "2.5"
chrono = "0.4"
rand = "0.9"
lazy_static = "1.4"
keyring = "2"
hex = "0.4"
urlencoding = "2.1"
webbrowser = "1.0"
discord-rich-presence = "1.0"
log = "0.4"
